--- a/FireWatch.vcxproj
+++ b/FireWatch.vcxproj
@@ -197,6 +197,7 @@
   <!--リソースファイル -->
   <ItemGroup>
     <!-- 音 -->
+    <None Include="ClassDiagram.cd" />
     <None Include="Resources\Audio\SE00.ogg" />
     <!-- フォント -->
     <None Include="Resources\Fonts\PongScore.dft" />
