--- a/FireWatch.vcxproj
+++ b/FireWatch.vcxproj
@@ -56,7 +56,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ForcedIncludeFiles>GameLibrary\GameLib.h;Utilities\MemoryLeakDetector.h</ForcedIncludeFiles>
+      <ForcedIncludeFiles>GameLibrary\GameLib.h;</ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
@@ -125,14 +125,6 @@
     <ClCompile Include="Game\TitleScene.cpp" />
     <ClCompile Include="Game\Vector2.cpp" />
     <ClCompile Include="WinMain.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibAudio.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibCollision.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibGraphics.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibInput.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibMath.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibScreen.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibSystem.cpp" />
-    <ClCompile Include="Libraries\GameLibrary\GameLibTime.cpp" />
     <ClCompile Include="Game\GameMain.cpp" />
   </ItemGroup>
   <!-- ヘッダファイル -->
@@ -182,16 +174,7 @@
     <ClInclude Include="Game\TitleScene.h" />
     <ClInclude Include="Game\Vector2.h" />
     <ClInclude Include="Game\Weapon.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibAudio.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibCollision.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibGraphics.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibInput.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibMath.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibScreen.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibSystem.h" />
-    <ClInclude Include="Libraries\GameLibrary\GameLibTime.h" />
     <ClInclude Include="Libraries\GameLibrary\GameLib.h" />
-    <ClInclude Include="Libraries\Utilities\MemoryLeakDetector.h" />
     <ClInclude Include="Game\GameMain.h" />
   </ItemGroup>
   <!--リソースファイル -->
